<resources>
    <string name="app_name">JCPGameStore</string>
    <string name="StoreTitle">JCPGameStore</string>
    <string name="btnSignIn">Sign In Your Acount</string>
    <string name="btnSignUp">Create Your Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txtTitleForm">Sign Up Form</string>
    <string name="editFName">Full Name</string>
    <string name="editLName">Last Name</string>
    <string name="btnTxtSignUp">Sign Up</string>
    <string name="EditTxtMember">Already a member? Sign In</string>
    <string name="txtsignup">Not a member? Sign Up</string>
    <string name="imgGameDesc">Game Image</string>
    <string name="titleGameDesc">Game Title</string>
    <string name="txtGameDesc">Game Description</string>
    <string name="gamePrice">Game Price</string>
    <string name="btnCart">Add to Cart</string>
    <string name="btnTxtPlace">Place Order</string>
    <string name="txtAddress">Address</string>
    <string name="txtOrderTotal">Your order total is:</string>
    <string name="txtViewShoppingCart">Shopping Cart</string>
    <string name="txtShipping" >Shipping:</string>
    <string name="txtSubtotal">Subtotal:</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
