<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgGame"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/imgGameDesc"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtGameName"
                    android:text="@string/titleGameDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="20sp"
                    app:fontFamily="@font/amiko" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <TextView
                        android:id="@+id/txtGamePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingBottom="4dp"
                        android:text="@string/gamePrice"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        app:fontFamily="@font/amiko" />

                    <Spinner
                        android:id="@+id/txt_amount"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="100dp"
                        android:layout_marginLeft="100dp"
                        android:background="#FFFFFF"
                        android:clipToPadding="false"
                        android:dropDownWidth="wrap_content"
                        android:entries="@array/numbers"
                        android:gravity="end"
                        android:spinnerMode="dropdown"
                        android:theme="@style/CardView.Light" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>